# SwapNetC-

./: CMakeCache.txt  CMakeLists.txt  GoogleService-Info.plist  README.md  firebase_swap_net.cpp  firebase_swap_net.h
firebase/: app.h  auth.h  database.h  firebase_swap_net.h  firebase_swap_net_test.cpp  storage.h
firebase/gtest/: gtest.h
opencv2/: opencv.hpp
tensorflow/: tensorflow.h
